Fixed wrapping of datetime in recent chats

--- a/css/xabber.css
+++ b/css/xabber.css
@@ -3334,7 +3334,7 @@ body {
     position: absolute;
     top: 16px;
     right: 7px;
-    max-width: 50px;
+    max-width: 54px;
     height: 10px;
     font-size: 9px;
     line-height: 10px;
